feat: criado api de login e logout
